--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -77,6 +77,7 @@ parts:
     source-type: git
     source-tag: v2.81.1
     source: https://github.com/etlegacy/etlegacy
+    source-submodules: libs
     build-packages:
       - g++
       - gcc
