use tar instead of git tag

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -73,11 +73,9 @@ layout:
 
 parts:
   etl:
-    plugin: cmake
-    source-type: git
-    source-tag: v2.81.1
-    source: https://github.com/etlegacy/etlegacy
-    source-submodules: libs
+    plugin: dump
+    source-type: tar
+    source: https://github.com/etlegacy/etlegacy/archive/refs/tags/v2.81.1.tar.gz
     build-packages:
       - g++
       - gcc
