--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -94,7 +94,7 @@ parts:
       - libminizip-dev
       - libturbojpeg0-dev
       - libssl-dev
-      - libcjson-dev
+      - libjson-c-dev
       - libfreetype6-dev
       - libpng-dev
       - libsqlite3-dev
@@ -106,7 +106,7 @@ parts:
 
     stage-packages:
       - libsdl2-2.0-0
-      - libcjson1
+      - libjson-c4
       - libcurl4
       - libminizip1
       - libtheora-bin
